# OLLAWorstViolator

./: .gitignore  CMakeLists.txt  IssueTemplate.md  Makefile.am  OLLAWV.sln  README.md  clean_build.sh  config.h  configure.ac  create_test_cases.sh  small-data
OLLAWV/: OLLAWV.vcxproj  OLLAWV.vcxproj.filters
OLLAWV/Testing/: TestCases.cpp  TestCases.h  TestHelpers.cpp  TestHelpers.h
OLLAWVTester/: OLLAWVTester.cpp  OLLAWVTester.h  OLLAWVTester.vcxproj  OLLAWVTester.vcxproj.filters  OSVMDefs.h  stdafx.cpp
TestData/small-data/: heart1  iris.txt  teach  teach.txt  wine.txt
app-tests/: TestHelpers.cpp  TestHelpers.h
osvm/: AUTHORS  config.h  configure.ac  osvm  osvm.spec.in
osvm/src/: configuration.cc  configuration.h  launcher.cc  launcher.h  osvm.cc  osvm.h
osvm/src/data/: solver_factory.cc  solver_factory.h
osvm/src/math/: average.h  matrix.cc  matrix.h  matrix_sparse.h  numeric.h
osvm/src/model/: selection.h
osvm/src/svm/: bias.h  cache.h  classify.h  generator.h  kernel.cc  kernel.h  pairwise_solver.h  params.cc  params.h  solver.h  stop.cc  strategy.h  universal_solver.h  validation.h  violation.h
osvm/tests/logging/: fake_log.cc
scripts/: build.sh  clean.sh  create_test_cases.sh
small-data/: cancer  dermatology  euk  mushroom  pro  sonar  splice  vote  wine
src/: configuration.cc  configuration.h  launcher.cc  launcher.h  osvm.cc  osvm.h
src/data/: solver_factory.cc  solver_factory.h
src/feature/: feature.cc  feature.h
src/math/: matrix.h  matrix_dense.h
src/model/: selection.cc  selection.h
src/svm/: cache.cc  cache.h  classify.h  generator.h  kernel.cc  kernel.h  pairwise_solver.cc  pairwise_solver.h  params.cc  solver.cc  solver.h  stop.h  universal_solver.h  validation.cc  validation.h
test/: CMakeLists.txt  main.cc  main.cpp  osvm_test.cc  osvm_test.h  test_helpers.cc  test_helpers.h
test/data/: dataset_factory_test.cc
test/examples/: example.json  iris_test.json  pro_test.json  sonar_test.json  teach_test.json  vote_test.json
test/math/: matrix_operations_test.cc  matrix_utils.h
test/svm/: classification_test.cc
